# maid.astolfo

./: .gitignore  Caddyfile  Cargo.toml  README.md  build.rs  config.json  routes.rs
.github/workflows/: timetable.yml
src/: dungeon.rs  errors.rs  health.rs  initializer.rs  main.rs  middleware.rs  middlewares.rs  model.rs  routes.rs  supabase.rs  timetable.rs  util.rs
