[package]
name = "maid-astolfo"
version = "0.1.0"
edition = "2021"
publish = false
readme = "readme.md"
authors = ["UwU <uwussimo@icloud.com>"]
homepage = "https://api.r.maid.uz/"
documentation = "https://api.maid.uz"
repository = "https://github.com/mad-maids/maid.astolfo/"
license = "CC0 1.0 Universal"

[dependencies]
log = "0.4.14"
actix-web = "3"
serde = "1.0"
serde_json = "1.0"
dotenv = "0.15.0"
postgrest = "1.0"
mongodb = "2.0.0"
