[package]
name = "maid-astolfo"
version = "0.6.3"
edition = "2021"
publish = false
readme = "readme.md"
authors = ["UwU <uwussimo@icloud.com>"]
homepage = "https://api.r.maid.uz/"
documentation = "https://api.maid.uz"
repository = "https://github.com/mad-maids/maid.astolfo/"
license = "CC0 1.0 Universal"
build = "build.rs"

[target.'cfg(windows)'.build-dependencies]
winres = "=0.1.11"
winapi = { version = "=0.3.9", features = ["knownfolders", "mswsock", "objbase", "shlobj", "tlhelp32", "winbase", "winerror", "winsock2"] }

[dependencies]
log = "0.4.14"
env_logger = "0.8"
actix-web = "4.0.0-rc.3"
actix-files = "0.5.0"
serde = "1.0"
serde_json = "1.0"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
tempfile = "3"
zip = "0.5"

[package.metadata.winres]
OriginalFilename = "astolfo.exe"
LegalCopyright = "© Mad Maids & UwUssio. CC0 1.0 Universal."
ProductName = "Astolfo"
FileDescription = "Astolfo: WIUT server shipped into a single executable"