[package]
name = "astolfo"
version = "1.0.0"
edition = "2021"
publish = false
readme = "readme.md"
authors = ["UwU <uwussimo@icloud.com>"]
homepage = "https://maid.uz/"
documentation = "https://maid.uz"
repository = "https://github.com/mad-maids/maid.astolfo/"
license = "MIT"
build = "build.rs"

[target.'cfg(windows)'.build-dependencies]
winres = "=0.1.11"
winapi = { version = "=0.3.9", features = ["knownfolders", "mswsock", "objbase", "shlobj", "tlhelp32", "winbase", "winerror", "winsock2"] }

[dependencies]
log = "0.4.17"
env_logger = "0.9.0"
actix-web = "4.1.0"
actix-files = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
reqwest = { version = "0.11.11", features = ["json"] }
tempfile = "3.3.0"
zip = "0.6.2"

[package.metadata.winres]
OriginalFilename = "astolfo.exe"
LegalCopyright = "© Mad Maids & UwUssio. CC0 1.0 Universal."
ProductName = "Astolfo"
FileDescription = "Astolfo: WIUT server shipped into a single executable"